# skill-data-synthesis

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
src/skill_synth/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/skill_synth/collectors/: __init__.py  awesome_prompts.py  base.py  github_repo.py
src/skill_synth/filters/: __init__.py  heuristic.py  llm_filter.py
src/skill_synth/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/skill_synth/output/: __init__.py  writer.py
src/skill_synth/synthesis/: __init__.py  prompts.py  synthesizer.py
